--- a/templates/firstyear/FirstSemester.html
+++ b/templates/firstyear/FirstSemester.html
@@ -12,7 +12,7 @@
     <a href="{% url 'ResearchSeeds' %}">أصول البحث</a><br><br>
     <a href="{% url 'login' %}">اللغة الانكليزية 1</a><br><br>
     <a href="{% url 'login' %}">ثقافة</a><br><br>
-    <a href="{% url 'login' %}">الأدب الجاهلي1</a><br><br>
+    <a href="{% url 'Pre_IslamicLiterature' %}">الأدب الجاهلي1</a><br><br>
     <a href="{% url 'login' %}">علم البيان</a><br><br>
     <a href="{% url 'login' %}">التاريخ السياسي1</a><br><br>
     <a href="{% url 'login' %}">الخدمات</a><br><br>
