--- a/templates/firstyear/GMA/AGrammar4.html
+++ b/templates/firstyear/GMA/AGrammar4.html
@@ -20,7 +20,7 @@
 
 
                 <p>
-                    <label>السؤال : <input name="question" type="text"/></label>
+                    <label>السؤال : <textarea name="question" cols="10" rows="2"></textarea></label>
                 </p>
 
                 <p>
