--- a/templates/firstyear/ResearchSeeds/AResearchSeeds.html
+++ b/templates/firstyear/ResearchSeeds/AResearchSeeds.html
@@ -7,10 +7,10 @@
 <body>
 <div style="text-align: center;">
 
-    <a href="{% url 'AResearchSeeds1'%}">سؤال و جواب</a><br><br>
-    <a href="{% url 'AResearchSeeds4'%}">سؤال و أربع اجوبة</a><br><br>
-    <a href="{% url 'AResearchSeedsG'%}">اسئلة ذهبية</a><br><br>
-    <a href="{% url 'AResearchSeedsP'%}">اسئلة دوات</a><br><br>
+    <a href="{% url 'AResearchSeeds1M'%}">سؤال و جواب</a><br><br>
+    <a href="{% url 'AResearchSeeds4M'%}">سؤال و أربع اجوبة</a><br><br>
+    <a href="{% url 'AResearchSeedsGM'%}">اسئلة ذهبية</a><br><br>
+    <a href="{% url 'AResearchSeedsPS'%}">اسئلة دوات</a><br><br>
 </div>
 
 <a href="{% url 'ResearchSeeds'%}">الرجوع</a>
