--- a/templates/firstyear/FirstSemester.html
+++ b/templates/firstyear/FirstSemester.html
@@ -10,10 +10,10 @@
 
     <a href="{% url 'GMA' %}">نحو و صرف 1</a><br><br>
     <a href="{% url 'ResearchSeeds' %}">أصول البحث</a><br><br>
-    <a href="{% url 'login' %}">اللغة الانكليزية 1</a><br><br>
-    <a href="{% url 'login' %}">ثقافة</a><br><br>
+    <a href="{% url 'AEn' %}">اللغة الانكليزية 1</a><br><br>
+    <a href="{% url 'ATh' %}">ثقافة</a><br><br>
     <a href="{% url 'Pre_IslamicLiterature' %}">الأدب الجاهلي1</a><br><br>
-    <a href="{% url 'login' %}">علم البيان</a><br><br>
+    <a href="{% url 'Statement' %}">علم البيان</a><br><br>
     <a href="{% url 'login' %}">التاريخ السياسي1</a><br><br>
     <a href="{% url 'login' %}">الخدمات</a><br><br>
 </div>
